@@ -13,8 +13,37 @@ allprojects {
     }
 }
 
+compileJava {
+    options.compilerArgs += '-parameters'
+    options.compilerArgs += '--enable-preview'
+}
+
+tasks.withType(JavaCompile).all {
+    options.compilerArgs += '--enable-preview'
+}
+
+tasks.withType(Test).all {
+    jvmArgs += '--enable-preview'
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
+
 dependencies {
     implementation 'com.discord4j:discord4j-core:3.2.0-M1'
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'com.google.guava:guava:30.1-jre'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.7.0'
+
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+
+    implementation 'org.openjdk.jmh:jmh-core:1.19'
+    annotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess:1.19'
+}
+
+test {
+    useJUnitPlatform()
 }
